fix(Button): normal-contrast loading view (#1630)

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -230,6 +230,10 @@ $block: '.#{variables.$ns}button';
             --_--background-color: var(--g-color-base-light);
             --_--background-color-hover: var(--g-color-base-light-hover);
             --_--focus-outline-color: var(--g-color-line-light);
+
+            &#{$block}_loading {
+                --_--background-color-hover: var(--g-color-base-simple-hover);
+            }
         }
 
         &_outlined-contrast {
